src/styles/style.scss
/* RESPONSIVE SECTION */

$small-device-width: 0px;
$large-device-width: 992px;

@mixin small_device {
  @media (min-width: #{$small-device-width}) and (max-width: #{$large-device-width - 1px}) {
    @content;
  }
}

@mixin large_device {
  @media (min-width: #{$large-device-width}) {
    @content;
  }
}

html, body {
  scroll-behavior: smooth;
}


.background-gradient {
  background: linear-gradient(181.35deg, #000000 1.15%, #333333 100.08%, rgba(34, 34, 34, 0.85) 146.92%, rgba(0, 0, 0, 0.53) 156.74%, rgba(0, 0, 0, 0.53) 156.74%);
}

/* NAVBAR SECTION */

.navbar-absolute {
  @include large_device() {
    background: transparent;
    position: absolute;
    color: #fafafa;
    width: 100%;
    font-weight: 600;
  }
}

.navbar-link {
  z-index: 1;
  position: relative;
  color: #fff;
}

.navbar-link:hover {
  cursor: pointer;
  color: rgb(30, 108, 191);
}

.navbar-text-right {
  @include large_device() {
    background: transparent;
    position: absolute;
    width: 100%;
  }
}

/* HOME SECTION */

#landing-page-section {
  background: url("../assets/images/landing-background.png");
  background-size: cover;
  background-position: center center;
}

.landing-page-name-title {
    font-size: 16px;
    background: -webkit-radial-gradient(#ffffff, rgb(30, 108, 191));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    @include small_device() {
        font-size: 32px !important;
    }
    @include large-device {
        font-size: 48px !important;
    }
}

.landing-page-hr {
  background-color: #fff;
}

.landing-page-text {
  font-size: 24px;
  color: #fff;
}

/* INTRODUCTION SECTION */

.introduction-title {
  font-style: normal;
  font-weight: 300;
  color: #2294E0;
  @include small_device() {
    font-size: 32px;
  }
  @include large_device() {
    font-size: 48px;
    line-height: 56px;
  }
}

.introduction-description {
  font-style: normal;
  font-weight: 300;
  color: #777777;
  @include small_device() {
    font-size: 18px;
  }
  @include large_device() {
    font-size: 24px;
    line-height: 32px;
  }
}

/* ICONS SECTION */

.icons-description {
  font-style: normal;
  font-weight: 300;
  color: #777777;
  @include small_device() {
    font-size: 18px;
  }
  @include large_device() {
    font-size: 24px;
    line-height: 28px;
  }
}

/* PROJECTS SECTION */

.projects-title {
  font-style: normal;
  font-weight: 300;
  color: #2294E0;
  @include small_device() {
    font-size: 32px;
  }
  @include large_device() {
    font-size: 48px;
  }
}

.projects-card {
  background: #242424;
  @include large_device() {
    padding: 10% 5%;
  }
}

.projects-card:hover {
  background-color: #222222;
  cursor: pointer;
}

.projects-card-icon {
  color: #5A5A5A;
}

.projects-card-title {
  font-style: normal;
  font-weight: normal;
  color: #2294E0;
  @include small_device() {
    font-size: 20px;
  }
  @include large_device() {
    font-size: 24px;
    line-height: 28px;
  }
}

.projects-card-description {
  font-style: normal;
  font-weight: 300;
  color: #888888;
  @include large_device() {
    font-size: 18px;
    line-height: 21px;
  }
}

.projects-html5 {
  color: #E07222;
}

.projects-css3 {
  color: #059BFF;
}

.projects-js {
  color: #F1B51B;
}

.projects-bootstrap {
  color: #563D7C;
}

.projects-react {
  color: #61DBFB;
}

.projects-icon {
  font-size: 24px;
}

/* CONTACT SECTION */

.contact-title {
  font-style: normal;
  font-weight: 300;
  color: #2294E0;
  @include small_device() {
    font-size: 32px;
  }
  @include large_device() {
    font-size: 48px;
  }
}

.contact-section-success-title {
  font-style: normal;
  font-weight: 300;
  color: #777777;
  @include small_device() {
    font-size: 24px;
  }
  @include large_device() {
    font-size: 32px;
  }
}

.contact-section-success-icon {
  color: green;
}

.field {
  width: 100%;
  height: 56px;
  border-radius: 4px;
  position: relative;
  background-color: #222222;
  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
  border-bottom: 1px solid #888888;
}

.field:hover {
  background-color: #444444;
  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
}

.field.active {
  background-color: #222222;
  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.2);
}

.field.active input {
  padding: 24px 16px 8px 16px;
}

.field.active input + label {
  top: 4px;
  opacity: 1;
  color: #666666;
}

.field.locked {
  pointer-events: none;
}

.field input {
  width: 100%;
  height: 56px;
  position: relative;
  padding: 0px 16px;
  border: none;
  border-radius: 4px;
  font-size: 16px;
  font-weight: 400;
  line-height: normal;
  background-color: transparent;
  color: rgb(199, 199, 199);
  outline: none;
  box-shadow: 0px 4px 20px 0px transparent;
  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out,
    0.1s padding ease-in-out;
  -webkit-appearance: none;
}

.field input::-webkit-input-placeholder {
  color: rgba(255, 255, 255, 0.8);
}
.field input::-moz-placeholder {
  color: rgba(255, 255, 255, 0.8);
}
.field input:-ms-input-placeholder {
  color: rgba(255, 255, 255, 0.8);
}
.field input:-moz-placeholder {
  color: rgba(255, 255, 255, 0.8);
}

.field input + label {
  position: absolute;
  top: 24px;
  left: 16px;
  font-size: 12px;
  font-weight: 600;
  line-height: 24px;
  color: #ffffff;
  opacity: 0;
  pointer-events: none;
  transition: 0.1s all ease-in-out;
}

.field input + label.error {
  color: #ec392f;
}

.field p.predicted {
  position: absolute;
  top: 8px;
  left: 16px;
  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  color: #e0e0e0;
  opacity: 1;
  pointer-events: none;
}

input:-internal-autofill-selected {
  background-color: #222222 !important;
}



.contact-field-message-title {
  color: #888888;
  font-weight: normal;
  font-style: normal;
}

.field-message {
  width: 100%;
  color: rgb(199, 199, 199);
  background-color: #222222;
  border: none;
  border-bottom: 1px solid #888888;
  outline: none;
}

.field-message:focus {
  border-bottom: 1px solid #888888;
  color: rgb(199, 199, 199);
}

.contact-button {
  background-color: #2294E0 !important;
  @include large_device() {
    width: 20%;
  }
}

